docs/src/content/versioned/components/1.0.0/fr/barre-de-navigation-superieure/code.mdx
---
layout: '~layouts/ComponentTabLayout.astro'
pageTitle: Barre de navigation supérieure - Code
componentName: Barre de navigation supérieure
tagName: '<gcds-top-nav>'
alsoCalled: menu du site, navigation, barre de navigation
description: Une barre de navigation supérieure est une liste horizontale de liens de page.
figma: 'https://www.figma.com/file/o4SguSZdar2CCFzSkWNrmB/Syst%C3%A8me-de-design-GC?type=design&node-id=114-1348&mode=design&t=1DaL24vHpjRRfHHm-0'
github: 'https://github.com/cds-snc/gcds-components/tree/main/packages/web/src/components/gcds-top-nav'
version: 1.6.0
previewLabel: Aperçu du composant de barre de navigation supérieure
dateModified: '2026-05-20T08:02:46-07:00'
---

import { CodePreview, CodeBuilder } from '~components';
import { links } from '~i18n/links';

## Sur cette page

- [Codage et accessibilité de la barre de navigation supérieure](#codage-et-accessibilite-de-la-barre-de-navigation-superieure)
- [Exemples](#section-examples)
- [Générateur de code](#generateur-de-code)

## Codage et accessibilité de la barre de navigation supérieure

### Ajoutez la barre de navigation supérieure à chaque page

- Mettez en œuvre la barre de navigation supérieure, de sorte qu'elle soit présente sur toutes les pages.
- Choisissez d'ajouter un groupe de navigation avec un deuxième niveau de navigation en plaçant le `<gcds-nav-link>` dans un `<gcds-nav-group>`.

### Utilisez la barre de navigation supérieure avec d'autres composants.

- Si vous utilisez un composant <gcds-link href={links.fr.breadcrumbs}>chemin de navigation</gcds-link>, uniformisez la hiérarchie dans les deux ensembles sur le site.
- Si vous utilisez le composant <gcds-link href={links.fr.header}>en-tête</gcds-link>, ajoutez la barre de navigation supérieure directement dans l'en-tête en insérant un élément enfant à l'aide de l'attribut `slot="menu"` dans l'en-tête. Cela placera la barre de navigation supérieure dans l'en-tête, après la bascule de langue, la signature et la barre de recherche.

<h2 id="section-examples">Exemples</h2>

Explorez les différentes façons de configurer le composant. Chaque exemple présente une mise en œuvre fonctionnelle et du code prêt à copier.

### Dans cette section

- [Attributs essentiels](#section-essential)
- [Attributs facultatifs](#section-optional)
- [Emplacements (slots)](#section-slot)

<h3 id="section-essential">Attributs essentiels</h3>

Ces attributs sont requis pour que le composant fonctionne correctement.

#### `label`

L'attribut `label` définit le libellé du repère de navigation.

<CodePreview
  iframe
  code={`<gcds-top-nav label="Aperçu du composant de barre de navigation supérieure">
  <gcds-nav-link href="#" slot="home">Notification GC</gcds-nav-link>
  <gcds-nav-link href="#">Pourquoi Notification GC</gcds-nav-link>
  <gcds-nav-link href="#">Nous joindre</gcds-nav-link>
</gcds-top-nav>`}
/>

#### `menu-label` (`gcds-nav-group`)

L'attribut `menu-label` du sous-composant `gcds-nav-group` définit le libellé du sous-menu de navigation.

<CodePreview
  iframe
  code={`<gcds-top-nav label="Aperçu du composant de barre de navigation supérieure">
  <gcds-nav-link href="#" slot="home">Notification GC</gcds-nav-link>
  <gcds-nav-link href="#">Pourquoi Notification GC</gcds-nav-link>
  <gcds-nav-link href="#">Nous joindre</gcds-nav-link>
  <gcds-nav-group menu-label="Fonctionnalités" open-trigger="Fonctionnalités">
    <gcds-nav-link href="#">Personnaliser les messages</gcds-nav-link>
    <gcds-nav-link href="#">Planifier la date et l’heure d’envoi</gcds-nav-link>
  </gcds-nav-group>
</gcds-top-nav>`}
/>

#### `open-trigger` (`gcds-nav-group`)

L'attribut `open-trigger` du sous-composant `gcds-nav-group` définit le libellé du bouton lorsque le sous-menu est réduit.

<CodePreview
  iframe
  code={`<gcds-top-nav label="Aperçu du composant de barre de navigation supérieure">
  <gcds-nav-link href="#" slot="home">Notification GC</gcds-nav-link>
  <gcds-nav-link href="#">Pourquoi Notification GC</gcds-nav-link>
  <gcds-nav-link href="#">Nous joindre</gcds-nav-link>
  <gcds-nav-group menu-label="Fonctionnalités" open-trigger="Fonctionnalités">
    <gcds-nav-link href="#">Personnaliser les messages</gcds-nav-link>
    <gcds-nav-link href="#">Planifier la date et l’heure d’envoi</gcds-nav-link>
  </gcds-nav-group>
</gcds-top-nav>`}
/>

#### `href` (`gcds-nav-link`)

L'attribut `href` du sous-composant gcds-nav-link définit l'URL de la page vers laquelle pointe le lien.

<CodePreview
  iframe
  code={`<gcds-top-nav label="Aperçu du composant de barre de navigation supérieure">
  <gcds-nav-link href="#" slot="home">Notification GC</gcds-nav-link>
  <gcds-nav-link href="#">Pourquoi Notification GC</gcds-nav-link>
  <gcds-nav-link href="#">Nous joindre</gcds-nav-link>
</gcds-top-nav>`}
/>

<h3 id="section-optional">Attributs facultatifs</h3>

Ces attributs vous permettent de personnaliser ou d’enrichir le comportement et la présentation du composant.

#### `alignment`

L'attribut `alignment` définit l'alignement de la navigation supérieure. Les options sont :

- `start` (par défaut)
- `end`

<CodePreview
  iframe
  code={`<gcds-top-nav alignment="end" label="Aperçu du composant de barre de navigation supérieure">
  <gcds-nav-link href="#" slot="home">Notification GC</gcds-nav-link>
  <gcds-nav-link href="#">Pourquoi Notification GC</gcds-nav-link>
  <gcds-nav-link href="#">Nous joindre</gcds-nav-link>
</gcds-top-nav>`}
/>

#### `close-trigger` (`gcds-nav-group`)

L'attribut `close-trigger` du sous-composant `gcds-nav-group` définit le libellé du bouton lorsque le sous-menu est développé.

<CodePreview
  iframe
  code={`<gcds-top-nav label="Aperçu du composant de barre de navigation supérieure">
  <gcds-nav-link href="#" slot="home">Notification GC</gcds-nav-link>
  <gcds-nav-link href="#">Pourquoi Notification GC</gcds-nav-link>
  <gcds-nav-link href="#">Nous joindre</gcds-nav-link>
  <gcds-nav-group menu-label="Fonctionnalités" open-trigger="Fonctionnalités" close-trigger="Masquer les fonctionnalités">
    <gcds-nav-link href="#">Personnaliser les messages</gcds-nav-link>
    <gcds-nav-link href="#">Planifier la date et l’heure d’envoi</gcds-nav-link>
  </gcds-nav-group>
</gcds-top-nav>`}
/>

#### `open` (`gcds-nav-group`)

L'attribut `open` du sous-composant `gcds-nav-group` contrôle si le sous-menu est développé ou non. Par défaut, il est défini à `false`.

<CodePreview
  iframe
  code={`<gcds-top-nav label="Aperçu du composant de barre de navigation supérieure">
  <gcds-nav-link href="#" slot="home">Notification GC</gcds-nav-link>
  <gcds-nav-link href="#">Pourquoi Notification GC</gcds-nav-link>
  <gcds-nav-link href="#">Nous joindre</gcds-nav-link>
  <gcds-nav-group menu-label="Fonctionnalités" open-trigger="Fonctionnalités" open>
    <gcds-nav-link href="#">Personnaliser les messages</gcds-nav-link>
    <gcds-nav-link href="#">Planifier la date et l’heure d’envoi</gcds-nav-link>
  </gcds-nav-group>
</gcds-top-nav>`}
/>

#### `current` (`gcds-nav-link`)

L'attribut `current` du sous-composant `gcds-nav-link` indique si la page est la page actuelle ou non.

<CodePreview
  iframe
  code={`<gcds-top-nav label="Aperçu du composant de barre de navigation supérieure">
  <gcds-nav-link href="#" slot="home">Notification GC</gcds-nav-link>
  <gcds-nav-link href="#">Pourquoi Notification GC</gcds-nav-link>
  <gcds-nav-link current href="#">Nous joindre</gcds-nav-link>
</gcds-top-nav>`}
/>

<h3 id="section-slot">Emplacements (slots)</h3>

L’emplacement par défaut vous permet d’injecter du contenu personnalisé dans la zone de contenu principale du composant, et les emplacements nommés, dans des zones spécifiques.

#### `default`

L'emplacement par défaut sert à ajouter des groupes de navigation et des liens de navigation.

<CodePreview
  iframe
  code={`<gcds-top-nav label="Aperçu du composant de barre de navigation supérieure">
  <gcds-nav-link href="#" slot="home">Notification GC</gcds-nav-link>
  <gcds-nav-link href="#">Pourquoi Notification GC</gcds-nav-link>
  <gcds-nav-link href="#">Nous joindre</gcds-nav-link>
  <gcds-nav-group menu-label="Fonctionnalités" open-trigger="Fonctionnalités">
    <gcds-nav-link href="#">Personnaliser les messages</gcds-nav-link>
    <gcds-nav-link href="#">Planifier la date et l’heure d’envoi</gcds-nav-link>
  </gcds-nav-group>
</gcds-top-nav>`}
/>

#### `home`

L'emplacement `home` sert à ajouter le lien de la page d'accueil ou le titre du site.

<CodePreview
  iframe
  code={`<gcds-top-nav label="Aperçu du composant de barre de navigation supérieure">
  <gcds-nav-link href="#" slot="home">Notification GC</gcds-nav-link>
</gcds-top-nav>`}
/>

#### `default` (`gcds-nav-group`)

L'emplacement par défaut du sous-composant `gcds-nav-group` sert à ajouter la liste des liens de navigation.

<CodePreview
  iframe
  code={`<gcds-top-nav label="Aperçu du composant de barre de navigation supérieure">
  <gcds-nav-group menu-label="Fonctionnalités" open-trigger="Fonctionnalités">
    <gcds-nav-link href="#">Personnaliser les messages</gcds-nav-link>
    <gcds-nav-link href="#">Planifier la date et l’heure d’envoi</gcds-nav-link>
  </gcds-nav-group>
</gcds-top-nav>`}
/>

#### `default` (`gcds-nav-link`)

L'emplacement par défaut du sous-composant `gcds-nav-link` sert à ajouter le contenu du lien de navigation.

<CodePreview
  iframe
  code={`<gcds-nav-link href="#">Notification GC</gcds-nav-link>`}
/>

<CodeBuilder version={frontmatter.version} tagName={frontmatter.tagName} landmarkDisplay />
